# libopen

./: Cargo.toml  README.md
include/: open.h
src/: lib.rs
